Fixed wrong color on visited svg links on Chrome

--- a/svgLinks.css
+++ b/svgLinks.css
@@ -1,15 +1,14 @@
 /* purgecss start ignore */
 
 @namespace svg url(http://www.w3.org/2000/svg);
-/* svg|a text,
+svg|a text,
 text svg|a,
-text svg|a:visited,
-svg|a:visited text {
+svg|a:visited,
+svg|a:visited {
   fill: white; /* Even for text, SVG uses fill over color */
-/* } */
+}
 
 svg {
-  fill: white;
   width: 100%;
   height: auto;
 }
